# dd_chess

./: .clang-format  CMakeLists.txt  README.md
src/: attack.c  bitboard.c  board.c  common.c  magic.c  main.c  move_generator.c  perft.c  prng.c
src/board/: board.c  board.h
src/include/: attack.h  bitboard.h  board.h  common.h  magic.h  move.h  move_generator.h  perft.h  prng.h
src/move_generator/: move_generator.h
tools/: format
